Ready to merge w/ master: Contpaqi SDK implemented succesfully Resources path bug fixed DBcontext changed (_folioSDK) All settings moved to the config.json file.

--- a/StareMedic/StareMedic.csproj
+++ b/StareMedic/StareMedic.csproj
@@ -40,7 +40,7 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
-		<MauiImage Update="Resources\Images\logo_hospital.png">
+		<MauiImage Update="Resources\Images\medic.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</MauiImage>
 
@@ -52,7 +52,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiImage Remove="Resources\Images\logo_hospital.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Resources\Images\hosplogo.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Resources\Images\logo_hospital.png">
+	    <CopyToOutputDirectory></CopyToOutputDirectory>
+	  </Content>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -100,6 +110,12 @@
 	  <MauiXaml Update="Views\Viewers\ViewClinicalCase.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Data\config.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
