--- a/StareMedic/StareMedic.csproj
+++ b/StareMedic/StareMedic.csproj
@@ -32,10 +32,11 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\starepng.png" ForegroundScale="1"/>
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		
+		<MauiSplashScreen Include="Resources\Splash\staresplash.png" BaseSize="128,128"/> 
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -56,7 +57,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\AppIcon\starepng.png" />
 	  <None Remove="Resources\Images\hosplogo.jpg" />
+	  <None Remove="Resources\Splash\starepng.png" />
 	</ItemGroup>
 
 	<ItemGroup>
