back end logo update ready to release

--- a/StareMedic/StareMedic.csproj
+++ b/StareMedic/StareMedic.csproj
@@ -92,9 +92,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Resource Include="Resources\Images\logo_hospital.png">
+	  <Content Include="Resources\Images\logo_hospital.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Resource>
+	  </Content>
 	</ItemGroup>
 
 	<ItemGroup>
