--- a/StareMedic/Data/config.json
+++ b/StareMedic/Data/config.json
@@ -1,4 +1,4 @@
 {
   "ServerSDK": "26.116.39.19:4204",
-  "ConnString": "Server=26.101.17.190;Port=5432;User Id=admin;Password=staremedic1;Database=staremedic;"
+  "ConnString": "Server=localhost;Port=5432;User Id=admin;Password=pass;Database=staremedic;"
 }
